Fixed icon issues

--- a/public/css/argon-dashboard.css
+++ b/public/css/argon-dashboard.css
@@ -14589,7 +14589,7 @@ a.text-blue:focus {
 }
 
 .text-indigo {
-  color: #5603ad !important;
+  color: #134886 !important;
 }
 
 a.text-indigo:hover,
