--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,3 +1,8 @@
+.body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  font-size: 8;
+}
 
 .picture-anchor {
   position: relative;
@@ -17,58 +22,79 @@
 
 .text-2 {
   position: absolute;
-  top: 13.1%;
-  left: 8%;
-  font-weight: bolder;
-  font-size: 8
+  top: 12%;
+  left: 9%;
 }
+
 
 .text-3 {
   position: absolute;
-  top: 14.8%;
-  left: 14.9%;
-  font-weight: bolder;
-  font-size: 8
+  top: 13.5%;
+  left: 16%;
 }
 
 .text-4 {
   position: absolute;
-  top: 16.5%;
-  left: 8%;
-  font-weight: bolder;
-  font-size: 8
+  top: 15.1%;
+  left: 10%;
 }
 
 .text-5 {
   position: absolute;
-  top: 18.2%;
-  left: 11.9%;
-  font-weight: bolder;
-  font-size: 8
+  top: 16.7%;
+  left: 13.5%;
 }
 
 .text-6 {
   position: absolute;
-  top: 13%;
-  left: 63.9%;
-  font-weight: bolder;
-  font-size: 8
+  top: 11.9%;
+  left: 61.9%;
 }
 
 .text-7 {
   position: absolute;
-  top: 14.7%;
-  left: 63%;
-  font-weight: bolder;
-  font-size: 8
+  top: 13.5%;
+  left: 61%;
 }
 
 .text-8 {
   position: absolute;
-  top: 16.4%;
-  left: 56%;
-  font-weight: bolder;
-  font-size: 8
+  top: 15.1%;
+  left: 54.5%;
 }
 
+.text-9 {
+  position: absolute;
+  top: 32.4%;
+  left: 36.2%;
+}
 
+.text-10 {
+  position: absolute;
+  top: 34.2%;
+  left: 36.2%;
+}
+
+.text-11 {
+  position: absolute;
+  top: 35.9%;
+  left: 36.2%;
+}
+
+.text-12 {
+  position: absolute;
+  top: 32.4%;
+  left: 45.2%;
+}
+
+.text-13 {
+  position: absolute;
+  top: 34.2%;
+  left: 45.2%;
+}
+
+.text-14 {
+  position: absolute;
+  top: 35.9%;
+  left: 45.2%;
+}
