--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -98,3 +98,76 @@
   top: 35.9%;
   left: 45.2%;
 }
+
+
+.text-15 {
+  position: absolute;
+  top: 32.4%;
+  left: 54.2%;
+}
+
+.text-16 {
+  position: absolute;
+  top: 34.2%;
+  left: 54.2%;
+}
+
+.text-17 {
+  position: absolute;
+  top: 35.9%;
+  left: 54.2%;
+}
+
+.text-18 {
+  position: absolute;
+  top: 32.4%;
+  left: 63.2%;
+}
+
+.text-19 {
+  position: absolute;
+  top: 34.2%;
+  left: 63.2%;
+}
+
+.text-20 {
+  position: absolute;
+  top: 35.9%;
+  left: 63.2%;
+}
+
+.text-21 {
+  position: absolute;
+  top: 32.4%;
+  left: 72.2%;
+}
+
+.text-22 {
+  position: absolute;
+  top: 34.2%;
+  left: 72.2%;
+}
+
+.text-23 {
+  position: absolute;
+  top: 35.9%;
+  left: 72.2%;
+}
+
+.text-24 {
+  position: absolute;
+  top: 32.4%;
+  left: 81.2%;
+}
+
+.text-25 {
+  position: absolute;
+  top: 34.2%;
+  left: 81.2%;
+}
+
+.text-26 {
+  position: absolute;
+  top: 35.9%;
+  left: 81.2%;
+}
