Trimmed unnecessary info

--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,16 +1,15 @@
-
-
 .body {
   font-family: 'Roboto', sans-serif;
   font-weight: bolder;
   font-size: 8;
 }
 
-.border {
+.normal-border {
   border: 1px solid; 
   padding:1px; 
   text-align:center;
 }
+
 
 
 .main{
