Finalized individual PDF result, fixed button submission issue

--- a/public/css/argon-dashboard.css
+++ b/public/css/argon-dashboard.css
@@ -22281,206 +22281,177 @@ ul.stepper li.completed a .label {
 
 .text-2 {
   position: absolute;
-  top: 17.2%;
-  left: 14.5%;
-  font-weight: bolder;
-  font-size: 4
+  top: 17.3%;
+  left: 15%;
 }
+
 
 .text-3 {
   position: absolute;
-  top: 18.6%;
-  left: 20.5%;
-  font-weight: bolder;
-  font-size: 4
+  top: 18.7%;
+  left: 21%;
 }
 
 .text-4 {
   position: absolute;
-  top: 20%;
-  left: 15.5%;
-  font-weight: bolder;
-  font-size: 4
+  top: 20.1%;
+  left: 16%;
 }
 
 .text-5 {
   position: absolute;
-  top: 21.4%;
+  top: 21.5%;
   left: 18.5%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-6 {
   position: absolute;
-  top: 17.2%;
-  left: 61%;
-  font-weight: bolder;
-  font-size: 4
+  top: 17.3%;
+  left: 61.9%;
 }
 
 .text-7 {
   position: absolute;
-  top: 18.5%;
-  left: 60%;
-  font-weight: bolder;
-  font-size: 4
+  top: 18.8%;
+  left: 61%;
 }
 
 .text-8 {
   position: absolute;
-  top: 19.9%;
-  left: 55%;
-  font-weight: bolder;
-  font-size: 4
+  top: 20.1%;
+  left: 54.5%;
 }
-
-
 
 .text-9 {
   position: absolute;
-  top: 35.4%;
-  left: 37.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 35.5%;
+  left: 37.9%;
 }
 
 .text-10 {
   position: absolute;
-  top: 37%;
-  left: 37.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 40.3%;
+  left: 37.9%;
 }
 
 .text-11 {
   position: absolute;
-  top: 38.6%;
-  left: 37.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 44.9%;
+  left: 37.9%;
 }
 
 .text-12 {
   position: absolute;
-  top: 35.4%;
+  top: 35.5%;
   left: 45.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-13 {
   position: absolute;
-  top: 37%;
+  top: 40.3%;
   left: 45.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-14 {
   position: absolute;
-  top: 38.6%;
+  top: 44.9%;
   left: 45.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 
 .text-15 {
   position: absolute;
-  top: 35.4%;
+  top: 35.5%;
   left: 53.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-16 {
   position: absolute;
-  top: 37%;
+  top: 40.3%;
   left: 53.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-17 {
   position: absolute;
-  top: 38.6%;
+  top: 44.9%;
   left: 53.2%;
-  font-weight: bolder;
-  font-size: 4
 }
-
 
 .text-18 {
   position: absolute;
-  top: 35.4%;
+  top: 35.5%;
   left: 61.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-19 {
   position: absolute;
-  top: 37%;
+  top: 40.3%;
   left: 61.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-20 {
   position: absolute;
-  top: 38.6%;
+  top: 44.9%;
   left: 61.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-21 {
   position: absolute;
-  top: 35.4%;
+  top: 35.5%;
   left: 69.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-22 {
   position: absolute;
-  top: 37%;
+  top: 40.3%;
   left: 69.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-23 {
   position: absolute;
-  top: 38.6%;
+  top: 44.9%;
   left: 69.2%;
-  font-weight: bolder;
-  font-size: 4
 }
 
 .text-24 {
   position: absolute;
-  top: 35.3%;
-  left: 76.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 35.5%;
+  left: 74.2%;
 }
 
 .text-25 {
   position: absolute;
-  top: 36.9%;
-  left: 76.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 40.3%;
+  left: 74.2%;
 }
 
 .text-26 {
   position: absolute;
-  top: 38.5%;
-  left: 76.2%;
-  font-weight: bolder;
-  font-size: 4
+  top: 44.9%;
+  left: 74.2%;
+}
+
+.text-27 {
+  position: absolute;
+  top: 37.1%;
+  left: 37.9%;
 }
 
 
+.text-28 {
+  position: absolute;
+  top: 38.7%;
+  left: 37.9%;
+}
+
+.text-29 {
+  position: absolute;
+  top: 41.9%;
+  left: 37.9%;
+}
+
+.text-30 {
+  position: absolute;
+  top: 43.4%;
+  left: 37.9%;
+}
