--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -206,3 +206,28 @@ footer {
   top: 43.1%;
   left: 81.2%;
 }
+
+.text-27 {
+  position: absolute;
+  top: 34%;
+  left: 36.2%;
+}
+
+
+.text-28 {
+  position: absolute;
+  top: 36%;
+  left: 36.2%;
+}
+
+.text-29 {
+  position: absolute;
+  top: 39.5%;
+  left: 36.2%;
+}
+
+.text-30 {
+  position: absolute;
+  top: 41.4%;
+  left: 36.2%;
+}
