initial updated batch-individual pdf css

--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -1,12 +1,12 @@
 .body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arial', sans-serif;
   font-weight: bolder;
   font-size: 8;
 }
 
 .normal-border {
-  border: 1px solid; 
-  padding:1px; 
+  border: 1px solid;
+  padding:1px;
   text-align:center;
 }
 
@@ -16,6 +16,7 @@ p.solid{
   border-color: #e7e6e6;
   background-color: #e7e6e6;
 }
+
 
 .main{
   margin-bottom: 1cm;
@@ -40,13 +41,13 @@ p.solid{
 .date-of-birth{
   position: absolute;
   top: 115px;
-  right: 293px;
+  right: 302px;
 }
 
 .age{
   position: absolute;
   top: 130px;
-  right: 338px;
+  right: 395px;
 }
 
 .student-name {
@@ -54,7 +55,7 @@ p.solid{
 }
 
 .enlarged {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Arial', sans-serif;
   font-weight: bolder;
   font-size: 10;
 }
@@ -67,9 +68,9 @@ header {
 }
 
 footer {
-    position: fixed; 
-    bottom: 1cm; 
-    left: 0cm; 
+    position: fixed;
+    bottom: 1cm;
+    left: 0cm;
     right: 0cm;
 
 }
@@ -270,25 +271,32 @@ footer {
 }
 
 .normal-cell{
-  border: 1px solid; 
-  padding:1px; 
+  border: 1px solid;
+  padding:1px;
   padding-left: 10;
 }
 
 .center-cell{
-  border: 1px solid; 
-  padding:1px; 
+  border: 1px solid;
+  padding:1px;
   text-align: center;
 }
 
+.header-cell {
+  border: 1px solid;
+  padding:1px;
+  text-align: center;
+  background: #BBBAB8;
+}
+
 .left-cell{
-  border: 1px solid; 
-  padding:1px; 
-  
+  border: 1px solid;
+  padding:1px;
+
 }
 
 .center{
-  
+
   left: 40.2%;
 }
 
